# xcorrrs

./: .gitattributes  .gitignore  Cargo.toml  Readme.md
.github/workflows/: build_test_publish.yml
src/: binning.rs  configuration.rs  error.rs  fast_xcorr.rs  lib.rs  scoring_result.rs  utils.rs  xcorr.rs
test_files/: comet.params
test_files/spectra/: scan_10000.parquet  scan_100000.parquet  scan_100001.parquet  scan_100002.parquet  scan_100003.parquet  scan_100005.parquet  scan_100006.parquet  scan_100008.parquet  scan_100009.parquet  scan_100010.parquet  scan_100011.parquet  scan_100012.parquet  scan_100013.parquet  scan_100015.parquet  scan_100016.parquet  scan_100018.parquet  scan_100019.parquet  scan_10002.parquet  scan_100020.parquet  scan_100021.parquet  scan_100022.parquet  scan_100023.parquet  scan_100024.parquet  scan_100025.parquet  scan_100026.parquet  scan_100027.parquet  scan_100028.parquet  scan_100030.parquet  scan_100031.parquet  scan_100032.parquet  scan_100033.parquet  scan_100034.parquet  scan_100035.parquet  scan_100036.parquet  scan_100037.parquet  scan_100038.parquet  scan_100039.parquet  scan_100040.parquet  scan_100041.parquet  scan_100043.parquet  (+108420 more)
