[package]
name = "xcorrrs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/medbioinf/xcorrrs"
homepage = "https://github.com/medbioinf/xcorrrs"
documentation = "https://docs.rs/xcorrrs"
license-file = "LICENSE"
readme = "Readme.md"

exclude = [
    "/.github",
    "/test_files",
    "/.vscode",
]

[dependencies]
ndarray = "0.16.1"
ndrustfft = "0.5.0"
rustyms = "0.10.0"
thiserror = "2.0.12"


[dev-dependencies]
dihardts_omicstools = "3.1.0"
ndarray-stats = "0.6.0"
plotly = { version = "0.12.1", features = ["plotly_ndarray"]}
polars = { version = "0.49.1", features = ["decompress", "ndarray", "parquet"] }
rayon = "1.10.0"
